--- a/style.css
+++ b/style.css
@@ -1,56 +1,142 @@
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+
+}
+ul, ol, li{
+    list-style: none;
 }
 
 body{
-    background-color: dimgray;
+    height: 125vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: 100px 1fr 100px;
+    padding-left: 96px;
+    padding-right: 96px;
+    background-color: lightcyan;
 }
-img{
-    width: 35vh;
+h1{
+text-align: center;
+margin-top: 6vh;
 }
-p{
-    text-align: center;
-    font-size: 5.5vh;
-    margin-top: 7vh;
+.titulo2{
+    color: blue;
 }
 
+.galeria{
+    background-color:white;
+    height: 100%;
+    width: 100%;
+    grid-template-areas: 
+    "f1 f1 f1 f1 f1 f2 f2 f2 f3 f3 f3"
+    "f1 f1 f1 f1 f1 f4 f4 f4 f5 f5 f5"
+    "f1 f1 f1 f1 f1 f4 f4 f4 f5 f5 f5"
+    "f6 f6 f6 f7 f7 f7 f8 f8 f8 f8 f8";
+    display: grid;
+    gap: 12px;
 
 
-
-.imagem_grande_superior{
-    width: 80vh;
-   margin-left: 10vh;
 }
-.parte_superior{
-display: flexbox;
 
-align-items: center;
-justify-content: center;
-
-}
-.coluna1{
-    display: inline-block;
-    align-self: flex-end;
+.foto{
+    position: relative;
+    box-shadow: 0px 0px 8px black;
+    background-color: aqua;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    overflow: hidden;
     
-   
-}
-.coluna2{
-    display: flexbox;
-    align-self: center;
 
 }
-.imagem_maior_inferior{
-    width: 80vh;
-    margin-left: 10vh;
+
+.foto:nth-child(1){
+    grid-area: f1;
+    background-image: url(./img/img12.jpg);
+}
+.foto:nth-child(2){
+    grid-area: f2;
+    background-image: url(./img/img13.jpg);
+}
+.foto:nth-child(3){
+    grid-area: f3;
+    background-image: url(./img/img14.jpg);
+}
+.foto:nth-child(4){
+    grid-area: f4;
+    background-image: url(./img/img15.jpg);
+}
+.foto:nth-child(5){
+    grid-area: f5;
+    background-image: url(./img/img16.jpg);
+}
+.foto:nth-child(6){
+    grid-area: f6;
+    background-image: url(./img/img17.jpg);
+}
+.foto:nth-child(7){
+    grid-area: f7;
+    background-image: url(./img/img18.jpg);
+}
+.foto:nth-child(8){
+    grid-area: f8;
+    background-image: url(./img/img19.jpg);
 }
 
-.parte_inferior{
-    display: flex;
-    align-items: center;
+.foto__info{
     position: absolute;
-    width: 45vh;
-    gap: 2vh;
-    height: 30vh;
+    width: 100%;
+    background-color: #0009;
+    color: white;
+    bottom: 0;
+    transform: translateY(100%);
+    transition: 0.5s;
+}
+.foto:hover > .foto__info{
+    transform: translateY(0%);
+}
+
+@media (max-width: 768px) {
+    body{
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+    .galeria{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .foto{
+        width: 100%;
+        height: 33vh;
+
+        
+    }
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom{
+   border-radius: 50px;
+ background-color: black;
+ align-items: center;
+ width: 150px;
+ height: 40px;
+ font-size: 1.3em;
+ display: flex;
+ justify-content: center;
+ margin-top: -12vh;  
+ 
+}
+a{
+    color: white;
 }
